--- a/docs/en/01.Smart-contract.md
+++ b/docs/en/01.Smart-contract.md
@@ -1,6 +1,6 @@
 # Messages Smart Contract Guide
 
-This guide explains the purpose and functionality of the Messages smart contract and provides step-by-step instructions for deploying it using Remix IDE.
+This guide explains the purpose and functionality of the `contracts/Messages.sol` smart contract and provides step-by-step instructions for deploying it using Remix IDE.
 
 ## Contract Overview
 
@@ -70,12 +70,16 @@ Remix IDE is a browser-based development environment that requires no installati
 
 ### Step 3: Compile the Contract
 
+![compiler](../../images/remix-compile.png)
+
 1. Click on the "Solidity Compiler" tab (2nd icon on the left sidebar)
 2. Ensure the "Compiler" dropdown shows 0.8.0 or a more recent version
 3. Click the "Compile Messages.sol" button
 4. If compilation is successful, you'll see a green checkmark
 
 ### Step 4: Deploy the Contract
+
+![deploy](../../images/remix-deploy-interact.png)
 
 1. Click on the "Deploy & Run Transactions" tab (3rd icon on the left sidebar)
 2. From the "Environment" dropdown:
