--- a/docs/es/01.Smart-contract.md
+++ b/docs/es/01.Smart-contract.md
@@ -1,6 +1,6 @@
 # Guía del Smart Contract de Mensajes
 
-Esta guía explica el propósito y la funcionalidad del smart contract Messages y proporciona instrucciones paso a paso para desplegarlo utilizando Remix IDE.
+Esta guía explica el propósito y la funcionalidad del smart contract `contracts/Messages.sol` y proporciona instrucciones paso a paso para desplegarlo utilizando Remix IDE.
 
 ## Descripción General del Contrato
 
